# rs-mon

./: .gitignore  Cargo.toml  README.MD  build.rs
config/: log4rs.yaml
src/: main.rs
src/protos/: telemetry.proto  telemetry.rs
