[package]
name = "rs-mon"
version = "0.1.0"
authors = ["David Schmitz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.14.15"
protobuf = "2.16.2"
paho-mqtt = "0.6.0"
log = "0.4.11"
log4rs = { version = "0.12.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }


[build-dependencies]
protobuf-codegen-pure = "2.3"
